Changes in version 1.3.1 (?? Mar 2007)

 - getType() is now const correct (API Changes)

 - Added scissor test to opengl draw2DImage method that ignored clip.

 - Fixed a bug in rect::isValid, it was almost always true.
 
 - There is now a way to set which scene manager should recieve user input, when working
   with multiple scene managers: IrrlichtDevice::setInputReceivingSceneManager().
 
 - ICursorControl now supports setting a reference rectangle.
   If this rect is set, the cursor position is not being calculated relative to
   the rendering window but to this rect. You can set the rect pointer to 0 to disable
   this feature again. This feature is useful when rendering into parts of foreign windows
   for example in an editor. See ICursorControl::setReferenceRect() for details.
   (Windows only implementation currently)

 - It is now possible to clone single scene nodes (ISceneNode::clone()) and to create copies
   of a whole scene graph (ISceneManager::createNewSceneManager(cloneContent=true);

 - IAttributes now supports a user pointer (void*)

 - Added query methods to scene manager: Find Scene nodes by type
    getSceneNodesFromType

 - Added min and max functions with 3 values: core::min_ and core::max_

GUI:

  - Added setColor and setScaleImage to GUIImage.

  - Made GUIListBox clip properly.

  - added getOSOperator to GUIEnvironment (for clipboard access in elements) and updated CGUIEditBox.

  - Can now load/save gui environment from/to an element.

GUI Editor:

  - Added cut/copy/paste using clipboard and xml (via memory file). Will have problems in Linux due to no clipboard support

  - Added texture attribute element


-------------------------------------------
Changes in version 1.3 (15 Mar 2007)

- SMaterial structure changed:
   - Enable Irrlicht to change TextureAddress Mode (Clamping), for each layer separately
   - Added Texture matrices to SMaterial for all texture layers