@@ -12,114 +12,70 @@ namespace irr
 namespace scene  
 {
 	//! An enumeration for all types of built-in scene nodes 
+	/** A scene node type is represented by a four character code 
+	such as 'cube' or 'mesh' instead of simple numbers, to avoid
+	name clashes with external scene nodes.*/
 	enum ESCENE_NODE_TYPE
 	{
 		//! simple cube scene node
-		ESNT_CUBE = 0,
+		ESNT_CUBE           = MAKE_IRR_ID('c','u','b','e'),
 
 		//! Sphere scene node
-		ESNT_SPHERE,
+		ESNT_SPHERE         = MAKE_IRR_ID('s','p','h','r'),
 
 		//! Text Scene Node
-		ESNT_TEXT,
+		ESNT_TEXT           = MAKE_IRR_ID('t','e','x','t'),
 
 		//! Water Surface Scene Node
-		ESNT_WATER_SURFACE,
+		ESNT_WATER_SURFACE  = MAKE_IRR_ID('w','a','t','r'),
 
 		//! Terrain Scene Node
-		ESNT_TERRAIN,
+		ESNT_TERRAIN        = MAKE_IRR_ID('t','e','r','r'),
 
 		//! Sky Box Scene Node
-		ESNT_SKY_BOX,
+		ESNT_SKY_BOX        = MAKE_IRR_ID('s','k','y','_'),
 
 		//! Shadow Volume Scene Node
-		ESNT_SHADOW_VOLUME,
+		ESNT_SHADOW_VOLUME  = MAKE_IRR_ID('s','h','d','w'),
 
 		//! OctTree Scene Node
-		ESNT_OCT_TREE,
+		ESNT_OCT_TREE       = MAKE_IRR_ID('o','c','t','t'),
 
 		//! Mesh Scene Node
-		ESNT_MESH,
+		ESNT_MESH           = MAKE_IRR_ID('m','e','s','h'),
 
 		//! Light Scene Node
-		ESNT_LIGHT,
+		ESNT_LIGHT          = MAKE_IRR_ID('l','g','h','t'),
 
 		//! Empty Scene Node
-		ESNT_EMPTY,
+		ESNT_EMPTY          = MAKE_IRR_ID('e','m','t','y'),
 
 		//! Dummy Transformation Scene Node
-		ESNT_DUMMY_TRANSFORMATION,
+		ESNT_DUMMY_TRANSFORMATION = MAKE_IRR_ID('d','m','m','y'),
 
 		//! Camera Scene Node
-		ESNT_CAMERA,
+		ESNT_CAMERA         = MAKE_IRR_ID('c','a','m','_'),
 
 		//! Maya Camera Scene Node
-		ESNT_CAMERA_MAYA,
+		ESNT_CAMERA_MAYA    = MAKE_IRR_ID('c','a','m','M'),
 
 		//! First Person Shooter style Camera
-		ESNT_CAMERA_FPS,
+		ESNT_CAMERA_FPS	    = MAKE_IRR_ID('c','a','m','F'),
 
 		//! Billboard Scene Node
-		ESNT_BILLBOARD,
+		ESNT_BILLBOARD      = MAKE_IRR_ID('b','i','l','l'),
 
 		//! Animated Mesh Scene Node
-		ESNT_ANIMATED_MESH,
+		ESNT_ANIMATED_MESH  = MAKE_IRR_ID('a','m','s','h'),
 
 		//! Particle System Scene Node
-		ESNT_PARTICLE_SYSTEM,
+		ESNT_PARTICLE_SYSTEM = MAKE_IRR_ID('p','t','c','l'),
 
 		//! Quake3 Model Scene Node ( has tag to link to )
-		ESNT_MD3_SCENE_NODE,
-
-		//! Amount of build in Scene Nodes
-		ESNT_COUNT,
+		ESNT_MD3_SCENE_NODE	= MAKE_IRR_ID('m','d','3','_'),
 
 		//! Unknown scene node
-		ESNT_UNKNOWN,
-
-		//! This enum is never used, it only forces the compiler to 
-		//! compile these enumeration values to 32 bit.
-		ESNT_FORCE_32_BIT = 0x7fffffff
-	};
-
-
-	//! An enumeration for all types of automatic culling for built-in scene nodes 
-	enum E_CULLING_TYPE
-	{
-		EAC_OFF = 0,
-		EAC_BOX,
-		EAC_FRUSTUM_BOX,
-		EAC_FRUSTUM_SPHERE
-	};
-
-	//! Names for culling type
-	const c8* const AutomaticCullingNames[] =
-	{
-		"false",
-		"box",					// camera box against node box
-		"frustum_box",			// camera frustum against node box
-		"frustum_sphere",		// camera frustum against node sphere
-		0
-	};
-
-	//! An enumeration for all types of debug data for built-in scene nodes (flags)
-	enum E_DEBUG_SCENE_TYPE 
-	{
-		//! No Debug Data ( Default )
-		EDS_OFF			= 0,
-		//! Show Bounding Boxes of SceneNode
-		EDS_BBOX		= 1,
-		//! Show Vertex Normals
-		EDS_NORMALS		= 2,
-		//! Shows Skeleton/Tags
-		EDS_SKELETON		= 4,
-		//! Overlays Mesh Wireframe
-		EDS_MESH_WIRE_OVERLAY	= 8,
-		//! Temporary use transparency Material Type 
-		EDS_HALF_TRANSPARENCY	= 16,
-		//! Show Bounding Boxes of all MeshBuffers
-		EDS_BBOX_BUFFERS	= 32,
-		EDS_FULL		= EDS_BBOX | EDS_NORMALS | EDS_SKELETON | EDS_MESH_WIRE_OVERLAY
+		ESNT_UNKNOWN        = MAKE_IRR_ID('u','n','k','n')
 	};
 
 
