@@ -19,36 +19,31 @@ namespace irr
 namespace scene
 {
 
-//! Names for scene node types
-const c8* const SceneNodeTypeNames[] =
-{
-	"cube",
-	"sphere",
-	"text",
-	"waterSurface",
-	"terrain",
-	"skyBox",
-	"shadowVolume",
-	"octTree",
-	"mesh",
-	"light",
-	"empty",
-	"dummyTransformation",
-	"camera",
-	"cameraMaya",
-	"cameraFPS",
-	"billBoard",
-	"animatedMesh",
-	"particleSystem",
-	0
-};
-
-
 
 CDefaultSceneNodeFactory::CDefaultSceneNodeFactory(ISceneManager* mgr)
 : Manager(mgr)
 {
 	// don't grab the scene manager here to prevent cyclic references
+
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_CUBE, "cube"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_SPHERE, "sphere"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_TEXT, "text"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_WATER_SURFACE, "waterSurface"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_TERRAIN, "terrain"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_SKY_BOX, "skyBox"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_SHADOW_VOLUME, "shadowVolume"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_OCT_TREE, "octTree"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_MESH, "mesh"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_LIGHT, "light"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_EMPTY, "empty"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_DUMMY_TRANSFORMATION, "dummyTransformation"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_CAMERA, "camera"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_CAMERA_MAYA, "cameraMaya"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_CAMERA_FPS, "cameraFPS"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_BILLBOARD, "billBoard"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_ANIMATED_MESH, "animatedMesh"));
+	SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_PARTICLE_SYSTEM, "particleSystem"));
+	// SupportedSceneNodeTypes.push_back(SSceneNodeTypePair(ESNT_MD3_SCENE_NODE, "md3"));
 }
 
 
@@ -123,15 +118,15 @@ ISceneNode* CDefaultSceneNodeFactory::addSceneNode(const c8* typeName, ISceneNod
 //! returns amount of scene node types this factory is able to create
 s32 CDefaultSceneNodeFactory::getCreatableSceneNodeTypeCount()
 {
-	return ESNT_COUNT;
+	return SupportedSceneNodeTypes.size();
 }
 
 
 //! returns type of a createable scene node type
 ESCENE_NODE_TYPE CDefaultSceneNodeFactory::getCreateableSceneNodeType(s32 idx)
 {
-	if (idx>=0 && idx<ESNT_COUNT)
-		return (ESCENE_NODE_TYPE)idx;
+	if (idx>=0 && idx<(s32)SupportedSceneNodeTypes.size())
+		return SupportedSceneNodeTypes[idx].Type;
 
 	return ESNT_UNKNOWN;
 }
@@ -140,8 +135,8 @@ ESCENE_NODE_TYPE CDefaultSceneNodeFactory::getCreateableSceneNodeType(s32 idx)
 //! returns type name of a createable scene node type 
 const c8* CDefaultSceneNodeFactory::getCreateableSceneNodeTypeName(s32 idx)
 {
-	if (idx>=0 && idx<ESNT_COUNT)
-		return SceneNodeTypeNames[idx];
+	if (idx>=0 && idx<(s32)SupportedSceneNodeTypes.size())
+		return SupportedSceneNodeTypes[idx].TypeName.c_str();
 
 	return 0;
 }
@@ -150,19 +145,19 @@ const c8* CDefaultSceneNodeFactory::getCreateableSceneNodeTypeName(s32 idx)
 //! returns type name of a createable scene node type 
 const c8* CDefaultSceneNodeFactory::getCreateableSceneNodeTypeName(ESCENE_NODE_TYPE type)
 {
-	// for this factory, type == index
-
-	if (type>=0 && type<ESNT_COUNT)
-		return SceneNodeTypeNames[type];
+	for (unsigned int i=0; i<SupportedSceneNodeTypes.size(); ++i)
+		if (SupportedSceneNodeTypes[i].Type == type)
+			return SupportedSceneNodeTypes[i].TypeName.c_str();
 
 	return 0;
 }
 
+
 ESCENE_NODE_TYPE CDefaultSceneNodeFactory::getTypeFromName(const c8* name)
 {
-	for ( int i=0; SceneNodeTypeNames[i]; ++i)
-		if (!strcmp(name, SceneNodeTypeNames[i]) )
-			return (ESCENE_NODE_TYPE)i;
+	for (unsigned int i=0; i<SupportedSceneNodeTypes.size(); ++i)
+		if (SupportedSceneNodeTypes[i].TypeName == name)
+			return SupportedSceneNodeTypes[i].Type;
 
 	return ESNT_UNKNOWN;
 }
