@@ -6,6 +6,9 @@ Changes in version 1.3.1 (?? Mar 2007)
 
  - Fixed a bug in rect::isValid, it was almost always true.
  
+ - Enumeration values of the ESCENE_NODE_TYPE enum are no longer ints but four
+   character codes. If you were using them as index previously, this is no more possible now.
+ 
  - There is now a way to set which scene manager should recieve user input, when working
    with multiple scene managers: IrrlichtDevice::setInputReceivingSceneManager().
  
